# RAG-System

./: .env.example  .env.staging.example  .gitignore  CLAUDE.md  README.md  app_evaluation.txt  debug-retrieval.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vercel.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: app-shell.tsx  phase-four-console.tsx  rag-workbench.tsx
database/: migrations.md
docs/: DATABASE_RUNBOOK.md  DEVELOPMENT_RUNBOOK.md  INFRASTRUCTURE_RUNBOOK.md  OBSERVABILITY_RUNBOOK.md  OTHER_API_KEYS_SETUP_GUIDE_FOR_DUMMIES.md  PROJECT_RULES.md  RAG_EVALUATION_FRAMEWORK.md  RAG_IMPLEMENTATION_PLAN.md  RAG_SYSTEM_SPEC.md  RELEASE_RUNBOOK.md  SUPABASE_SETUP_GUIDE_FOR_DUMMIES.md  VERCEL_HOSTING_SETUP_GUIDE_FOR_DUMMIES.md
evaluation/: evaluation_queries.json
lib/: theme.ts
pages/: _error.tsx
prompts/: grounded-answer-system.md
supabase/: config.toml
tasks/: todo.md  ui-design-audit.md  ui-devils-advocate.md
tests/: admin.runtime-status-route.test.ts  admin.runtime-status.test.ts  answering.policy.test.ts  delete-document.test.ts  embedding.drift.test.ts  (+29 more)
worker/: .env.example  .env.staging.example  README.md  pyproject.toml
worker/src/rag_worker/: __init__.py  chunking.py  config.py  context_generator.py  embedding_provider.py  language.py  logging_utils.py  main.py  pdf_extractor.py  pipeline.py  repository.py  types.py  worker_loop.py
worker/tests/: __init__.py  test_chunking.py  test_language.py  test_pipeline.py  test_worker_loop.py
(+294 files in other folders)
