[project]
name = "rag-worker"
version = "0.2.0"
description = "Background worker for RAG ingestion jobs"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.99.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pypdf>=5.0.0",
  "supabase>=2.6.0",
  "tiktoken>=0.8.0"
]

[project.scripts]
rag-worker = "rag_worker.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
